--- a/tt_ansible/roles/fetcher/tasks/main.yml
+++ b/tt_ansible/roles/fetcher/tasks/main.yml
@@ -1,14 +1,13 @@
+---
 - name: installing pip3
   apt: 
     name: python3-pip
     state: present
-- name: installing python depedencies
-  tasks:
-  - name: install virtualenv
-    pip:
-      name: virtualenv
-  - name: Install specified python requirements in indicated (virtualenv)
-    pip:
-      requirements: /usr/src/requirements.txt #PATH C
-      virtualenv: /usr/src/TFM13186 #PATH C
-      virtualenv_python:
+- name: install virtualenv
+  pip:
+    name: virtualenv
+- name: Install specified python requirements in indicated (virtualenv)
+  pip:
+    requirements: "/usr/src/TFM13186/{{ endpoint }}" #PATH C
+    virtualenv: "{{ path }}"/TFM13186 #PATH C
+    virtualenv_python:
