--- a/tt_ansible/roles/folders/tasks/main.yml
+++ b/tt_ansible/roles/folders/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: "{{ endpoint }}"
   become: yes
   ansible.builtin.copy:
-    src: /usr/src/"{{ endpoint }}"
+    src: /usr/src/TFM13186/"{{ endpoint }}"
     dest: "{{ path }}"
     owner: root
     group: root
