Added: perfectly working on docker containers 02032021 Dur: 6h

--- a/tt_ansible/folder.yml
+++ b/tt_ansible/folder.yml
@@ -15,6 +15,10 @@
        vars:
          endpoint: "{{ point }}"
          path: "{{ dir }}"
+     - role: folders
+       vars:
+         endpoint: "{{ cors }}"
+         path: "{{ dir }}/{{ point }}"
 
  - name: displaying frontend
    gather_facts: no
@@ -28,6 +32,10 @@
        vars:
          endpoint: "{{ point }}"
          path: "{{ dir }}"
+     - role: folders
+       vars:
+         endpoint: "{{ cors }}"
+         path: "{{ dir }}/{{ point }}/src"
 
  - name: displaying fetcher
    gather_facts: no
