--- a/tt_ansible/roles/instnodejs/tasks/main.yml
+++ b/tt_ansible/roles/instnodejs/tasks/main.yml
@@ -8,4 +8,4 @@
     state: present
 - name: install packages from "{{ endpoint }}"
   npm:
-    path: "{{ path }}" # PATH B 
+    path: "{{ path }}/{{ endpoint }}" # PATH B 
