--- a/tt_ansible/host_vars/fetcher.yml
+++ b/tt_ansible/host_vars/fetcher.yml
@@ -3,3 +3,6 @@ dir: /usr/src/TFM
 point: backend
 conf: config.txt
 reqs: requirements.txt
+ansible_host: localhost
+ansible_user: root
+ansible_connection: local
