Added: solved previous bugs. Dur: 13h

--- a/v20210504chrys/roles/fetcher/tasks/main.yml
+++ b/v20210504chrys/roles/fetcher/tasks/main.yml
@@ -11,3 +11,8 @@
     requirements: "{{ path }}/{{ endpoint }}" #PATH C
     virtualenv: "{{ path }}/TFM13186" #PATH C
     virtualenv_python:
+- name: Install python chrysalis lib in indicated (virtualenv)
+  pip:
+    name: "{{ path }}/{{ lib }}" #PATH C
+    virtualenv: "{{ path }}/TFM13186" #PATH C
+    virtualenv_python:    
